tests/toy/neg/001698_mutation.toylang
program a = { while var a : bool do sleep; } .
